--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js" integrity="sha512-+Ru50BzEpZjlFzVnjSmJfYFPFfY2hS0Kjlu/IvqaJoux7maF5lJrRVUJWJ2LevPls7rd242GLbWEt+zAo4OVVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="libs/joy.min.js"></script>
-      <script type="module" crossorigin src="assets/index.76edb6ec.js"></script>
+      <script type="module" crossorigin src="assets/index.js"></script>
     </head>
 
 	<body>
